--- a/S23Ultra_API34/config.ini
+++ b/S23Ultra_API34/config.ini
@@ -27,5 +27,5 @@ image.sysdir.1=system-images/android-34/google_apis/x86_64/
 tag.id=google_apis
 tag.display=Google APIs
 abi.type=x86_64
-playstore.enabled=false
-showDeviceFrame=no
+playstore.enabled=false   # set to true if you want Google Play
+showDeviceFrame=yes
